fix: broken styles of top page

--- a/styles/base.css
+++ b/styles/base.css
@@ -11,11 +11,17 @@ header {
   justify-content: center;
   place-items: center;
   margin: 0;
-  padding: 1rem 3rem;
+  padding: 2rem 3rem;
 }
 
-header img {
+header nav {
+  margin-bottom: 0;
+  max-width: 120px;
+}
+
+header nav img {
   width: 100%;
+  margin: 0;
 }
 
 
@@ -60,7 +66,7 @@ section.detail {
   padding: 0 3rem;
 }
 section.detail::before {
-  background-image: url(/assets/cover.png);
+  background-image: url(/styles/cover.png);
   background-size: contain;
   position: absolute;
   content: "";
